# wikipedia_ql

./: .gitignore  .vale.ini  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: Cheatsheet.md  Tables.md
docs/showcase/: Infoboxes.md
examples/: 00-demo.py  01-simple.py  02-category.py  03-category-attributes.py  README.md  movies.py  nomadland.json  nomadland.py  nomadland_book.json  play.py  test_lark.py
tests/: test_fragment.py  test_fragment_query.py  test_fragment_select.py  test_integrational.py  test_parser.py  test_query_tables.py  test_selectors.py  test_table_reflow.py  test_wikipedia_ql.py
tests/_cache/: Agents of S.H.I.E.L.D..html  Agents of S.H.I.E.L.D..json  AllMovie.html  AllMovie.json  AllMovie.props.json  Assassins (1995 film).html  Assassins_(1995_film).props.json  Bear.html  Bear.json  Bear.props.json  Biophilia (album).html  Biophilia (album).json  Biophilia_(album).props.json  Björk.html  Björk.json  Björk.props.json  Bound (1996 film).html  Bound_(1996_film).props.json  Cloud Atlas (film).html  Cloud_Atlas_(film).props.json  Debut (Björk album).html  Debut (Björk album).json  Debut_(Björk_album).props.json  Homogenic.html  Homogenic.json  Homogenic.props.json  Https:--www.imdb.com-title-tt8902978-.json  IMDb.html  IMDb.json  IMDb.props.json  Jupiter Ascending.html  Jupiter_Ascending.props.json  Kharkiv.html  Kharkiv.props.json  Legends of Tomorrow.html  Legends of Tomorrow.json  Loki (TV series).html  (+58 more)
wikipedia_ql/: __init__.py  fragment.py  media_wiki.py  parser.py  run.py  selectors.py  tables.py  wikipedia_ql.lark
(+7 files in other folders)
