[tool.poetry]
name = "wikipedia_ql"
version = "0.1.0"
description = ""
authors = ["zverok <zverok.offline@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
lark = "^0.11.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
