[tool.poetry]
name = "wikipedia_ql"
version = "0.0.6"
description = "Query Language for Wikipedia"
authors = ["zverok <zverok.offline@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
lark = "^0.11.3"
bs4 = "^0.0.1"
soupsieve = "^2.3.1"
nltk = "^3.6.2"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
